syntax = "proto3";

import "google/protobuf/empty.proto";
import "com/cinematica/backend/authorization/requests/GetAuthorizationStateRequest.proto";

option java_package = "com.cinematica.backend.authorization";

service AuthorizationService {
  rpc getAuthorizationState(GetAuthorizationStateRequest) returns (GetAuthorizationStateRequest.Response);

  rpc configureNewAccount(google.protobuf.Empty) returns (google.protobuf.Empty);
}