syntax = "proto3";

option java_package = "com.cinematica.backend.authorization.requests";


message GetAuthorizationStateRequest {
  string emailAddress = 1;

  message Result {
    string authorizationMethod = 1;
  }
}